Squashed commit of the following:
commit 5ce28c3d570aca780238452190aa10d05b8b4095
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 21:57:23 2026 +0000

    Fix tests

commit 91cd02213134b4a9f60659419472e039a882105b
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 20:23:03 2026 +0000

    Update interfaces

commit 2ea47405c9ba12105b9404e5d6982e65e10d3417
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 19:24:15 2026 +0000

    Functional perspective clipping

commit d7bb447f3200b7b22fdf4b6a0e775850d45610f8
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:42:21 2026 +0000

    Faster

commit d2521ad63f916d917c4e87b37759eb178e94cdf0
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:24:17 2026 +0000

    functional, faster

commit a9681a7846d662256eadab2caa6ce4f542d3a932
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:16:03 2026 +0000

    Functional, but stream glitch

--- a/harmony/harmony_templates/ControlPanel.html
+++ b/harmony/harmony_templates/ControlPanel.html
@@ -51,7 +51,10 @@
                                 <tr>
                                     <td class="oid-col">{{ obj.oid }}</td>
                                     <td><input type="checkbox" class="form-check-input" name="{{ obj.oid }}_selectable"
-                                            {% if obj.oid in config.selectable %}checked{% endif %}></td>
+                                            {% if obj.oid in config.selectable or (obj.oid not in config.terrain and
+                                            obj.oid not in config.targetable and obj.oid not in config.enemies and
+                                            obj.oid not in config.allies and obj.oid not in config.moveable) %}checked{%
+                                            endif %}></td>
                                     <td><input type="checkbox" class="form-check-input" name="{{ obj.oid }}_terrain" {%
                                             if obj.oid in config.terrain %}checked{% endif %}></td>
                                     <td><input type="checkbox" class="form-check-input" name="{{ obj.oid }}_targetable"
