Add configurator back to harmony app

--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -97,6 +97,8 @@
                     <div class="col" align="center">
                         <button class="btn btn-info" onclick=" window.open('{harmonyURL}control','_blank')">Session
                             Control Panels</button>
+                        <button class="btn btn-secondary ml-2"
+                            onclick=" window.open('/configurator/','_blank')">Configurator</button>
                     </div>
                     <div class="col" align="right">
                         <input class="btn btn-danger" type="button" value="Reset Game" hx-get="{harmonyURL}reset">
